--- a/MyORMForPostgreSQL.csproj
+++ b/MyORMForPostgreSQL.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Adr.MyORM" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyORM\MyORM.csproj" />
   </ItemGroup>
 
 </Project>
